--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,11 +62,8 @@ body {
   }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+
+html, body {
+  overflow: hidden;
+  height: 100%;
 }
